SERVER-33437 Make Decorables not type-erased.

The current Decorable system type-erases the most derived (Decorated)
type when registering Decorations.  This is illegal as derived classes
which are no longer standard-layout can have the `Decorable` base
class reordered with respect to the base address of their storage.